kubernetes-manifests/traefik/lb-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v3.2.0
          args:
            - --providers.kubernetesCRD
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetesIngress
            - --ping
            - --metrics.prometheus=true
            - --metrics.prometheus.entryPoint=traefik
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: metrics
              containerPort: 8082
            - name: ping
              containerPort: 8080
          volumeMounts:
            - name: acme-json
              mountPath: /acme.json
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: acme-json
          hostPath:
            path: /var/lib/traefik/acme.json
            type: FileOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      name: metrics
      port: 8082
      targetPort: metrics
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-path
  namespace: resume-app
  annotations:
    traefik.io/service.serverstransport.address: 35.208.254.34:80
spec:
  stripPrefix:
    prefixes:
      - /

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: backend-path
  namespace: resume-app
  annotations:
    traefik.io/service.serverstransport.address: 35.208.254.34:80
spec:
  stripPrefix:
    prefixes:
      - /api/count
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resume-app-route
  namespace: resume-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jaromero.cloud`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: frontend-path
      services:
        - name: resume-frontend-svc
          port: 80

    - match: Host(`jaromero.cloud`) && PathPrefix(`/api/count`)
      kind: Rule
      middlewares:
        - name: backend-path
      services:
        - name: resume-backend-svc
          port: 8000
